src/objects/Game_Security__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Security permissions for the Appirio Gamification Engine (AGE).</description>
    <fields>
        <fullName>Award_Badge_to_Another_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The current user can award badges to another user.</description>
        <inlineHelpText>The current user can award badges to another user.</inlineHelpText>
        <label>Award Badge to Another User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_Points_to_Another_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The current user can award points to another user.</description>
        <inlineHelpText>The current user can award points to another user.</inlineHelpText>
        <label>Award Points to Another User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_New_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to create a new badge.</description>
        <inlineHelpText>Ability to create a new badge.</inlineHelpText>
        <label>Create New Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_New_Challenge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user can create a new Challenge.</description>
        <inlineHelpText>The user can create a new Challenge.</inlineHelpText>
        <label>Create New Challenge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The ability to remove Points from another user.  (Any user can remove their own points.)</description>
        <inlineHelpText>The ability to remove Points from another user.  (Any user can remove their own points.)</inlineHelpText>
        <label>Remove Points</label>
        <type>Checkbox</type>
    </fields>
    <label>Game Security</label>
</CustomObject>